docs: update build instruction so it's clear the rules libraries need to be built before executing the profiles feature: added jitpack custom build file refactor: rename error prone library artifactId and groupId